# agroadb-app

./: .editorconfig  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  ARQUITETURA_DIAGRAMAS.md  ARQUIVOS_MODIFICADOS.md  BANNER.txt  CHANGELOG_ML.md  CHECKLIST_ML.md  CHECKLIST_VALIDACAO.md  CONTRIBUTING.md  DEPLOY.md  DOCUMENTACAO.md  GUIA_DEMO.md  GUIA_INSTALACAO_TESTE.md  GUIA_OCR_INTEGRACOES.md  GUIA_RAPIDO_INTEGRACOES.md  GUIA_VISUAL_MELHORIAS.md  IMPLEMENTACAO_COMPLETA.md  INDICE_DOCUMENTACAO.md  INDICE_INTEGRACOES.md  INICIO_RAPIDO.md  INTEGRACAO_FRONTEND.md  INTEGRAÇÕES_IMPLEMENTADAS.md  LICENSE  ML_NETWORK_IMPLEMENTATION.md  Makefile  PROXIMOS_PASSOS.md  README.md  README_COLABORACAO.md  README_INTEGRACOES.md  RESUMO_FINAL.md  RESUMO_FINAL_ML.md  RESUMO_IMPLEMENTACAO.md  ROADMAP_DESENVOLVIMENTO.md  SECURITY.md  SUMARIO_DOCUMENTACAO.md  SUMARIO_EXECUTIVO.md  SUMARIO_FINAL.txt  (+22 more)
.github/: dependabot.yml  pull_request_template.md
backend/: .env.example  .env.test  Dockerfile  agroadb_local.db  pyproject.toml  requirements-minimal.txt  requirements.txt  sitecustomize.py
clients/python-client/: README.md  pyproject.toml  requirements.txt
clients/python-client/agroadb/: __init__.py
clients/python-client/tests/: test_client.py
docs/: COMERCIAL_B2B.md  FAQ.md  GLOSSARIO.md  MAPEAMENTO_APIS_GOV.md  OWASP_ASVS_API.md  README.md  SECRET_ROTATION.md  padroes-arquitetura-codigo.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
monitoring/: README.md  env.observability.example  prometheus.yml
nginx/: nginx.conf
postman/: AgroADB_API_Collection.json  Development.postman_environment.json  Production.postman_environment.json  README.md  Staging.postman_environment.json
product/: EDITORIAL_CHECKLIST.md  README.md  manual-do-utilizador.md
scripts/: backup.sh  deploy.sh  restore.sh  run-all-tests.sh  run-backend-tests.sh  setup-ssl.sh  (+3 more)
(+628 files in other folders)
